--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "type": "module",
   "scripts": {
-  "start": "node server.mjs",
-  "dev": "nodemon server.mjs"
+    "start": "node server.mjs",
+    "dev": "nodemon server.mjs"
   },
   "repository": {
     "type": "git",
@@ -21,7 +20,8 @@
   },
   "homepage": "https://github.com/R41ph21/learn-express#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-validator": "^7.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
